Spring'18 Labs/Lab13/compiling_error.txt
C:\Users\Asif Bashir\OneDrive\DS\Spring'18 Labs\Lab13\Task3.cpp:2:7: error: expected nested-name-specifier before 'namsepace'
 using namsepace std;
       ^~~~~~~~~
